<resources>
    <string name="app_name">MO</string>
    <string name="about_detail">	    名称:江西国税移动办公平台\n开发单位:中国软件OA事业部Android开发小组\n开发人员:张佳晨，张铭心，邹奇\n联系电话:1393939999\n
</string>
    <string name="submitbackness">提交反馈</string>
    <string name="checkversionbtn">检查更新</string>
    <string name="writeBackTohere">在此输入反馈信息</string>
    <string name="backnessTitle">反馈建议</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Request_simpleLogin">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=userEasyLogin</string>
    <string name="Request_getUserheadIcon">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/validateUser.do?reqCode=getUserPortraitByUserid</string>
    <string name="Request_uploadggfile">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=uploadCoverAndFJForNotice</string>
    <string name="upfileandfm">http://192.168.1.31:80/MobileMangers/service/noticeApply.do?reqCode=uploadCoverAndFJForNotice</string>
    <string name="Request_uploadheadicon">http://223.71.215.73:8001/ydqz/mobileCtrl/upload.do?URL=/mobile/service/validateUser.do?reqCode=uploadUserPortrait</string>
    <string name="Request_CircleRefresh">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=getDataVersionByUserid</string>
    <string name="Request_getUserMenu">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/validateUser.do?reqCode=getMenuResource</string>
    <string name="Request_AllUserList">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/cellPhoneBook.do?reqCode=queryAllUsersForLoginUser</string>
    <string name="Request_AllnewUserList">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/cellPhoneBook.do?reqCode=queryAllUsersForLoginUser</string>
    <string name="Request_alljgAndperson">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/cellPhoneBook.do?reqCode=queryQJswjgForLoginUser</string>
    <string name="Request_allnewjgAndperson">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/cellPhoneBook.do?reqCode=queryQJswjgForLoginUser</string>
    <string name="Request_del_remark">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=deleteComment</string>
    <string name="Request_del_gg">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=deleteNotice</string>
    <string name="Request_ggremark">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=addComment</string>
    <string name="Request_gggood">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=clickComment</string>
    <string name="Request_getfile">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/validateUser.do?reqCode=getFileInfoByFileid</string>
    <string name="Request_gg_startNotice">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=startNotice</string>
    <string name="Request_ggnewstartNotice">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=startNotice</string>
    <string name="Request_ggdetail">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=readNotice</string>
    <string name="Request_ggnewdetail">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=readNotice</string>
    <string name="Request_one_ggdetail">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=getNoticeInfoByNoticeid</string>
    <string name="Request_gglist">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=getAllPublicNotice</string>
    <string name="Request_ggnewlist">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=getAllPublicNotice</string>
    <string name="RequestBackToUs">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/validateUser.do?reqCode=helpAndFeedback</string>
    <string name="RequestJH">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=validateUser</string>
    <string name="RequestWSXX">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=updateUserInfo</string>
    <string name="RequestRootUrl">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/validateUser.do?reqCode=validateUser</string>
    <string name="Request_updatepass1">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=validateOldPassword</string>
    <string name="Request_tempupdatepass1">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=validateOldPasswordNewMD5</string>
    <string name="Request_updatepass2">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=updateLoginPassWordByUserId</string>
    <string name="Request_tempupdatepass2">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=updateLoginPassWordByUseraccount</string>
    <string name="RequestLogin">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=userLogin</string>
    <string name="RequestLogin_gw">http://223.71.215.73:8001/ydqz/OAService.do?URL=odps/services/LoginService/logonIn</string>
    <string name="Request_sendCheckCode">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=sendAuthCode</string>
    <string name="Request_checkCode">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/ignoreValidateUser.do?reqCode=validateAuthCode</string>
    <string name="RequestEditPre">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/validateUser.do?reqCode=getUserDetailByUserId</string>
    <string name="personNodeAll">http://223.71.215.73:8001/ydqz/OAService.do?URL=odps/services/GetTreeNodeService/GetTreeNode</string>
    <string name="RequestFileIsExist">http://223.71.215.73:8001/ydqz/OAService.do?URL=odps/services/GetFileService/isFileExist</string>
    <string name="RequestFileToHtml">http://223.71.215.73:8001/ydqz/fileController/viewFile.do?URL=/odps/services/GetFileService/getFile?</string>
    <string name="RequestWDYBlist">http://223.71.215.73:8001/ydqz/OAService.do?URL=odps/services/DaibanService/SingleDaiban</string>
    <string name="RequestMessagelist">http://223.71.215.73:8001/ydqz/mobileCtrl/</string>
    <string name="Request_msgtemp">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=getMsgList</string>
    <string name="Request_delmsg">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/noticeApply.do?reqCode=deleteMsg</string>
    <string name="RequestWDYBDetail">http://223.71.215.73:8001/ydqz/OAService.do?URL=odps/services/YuelanService/Yuelan</string>
    <string name="RequestHYSPinitView">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/meetingApply.do?reqCode=queryMeetingInitView</string>
    <string name="Request_hysp_start">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/meetingApply.do?reqCode=tkapplyMeeting</string>
    <string name="Request_hysp_start_temp">http://223.71.215.73:8001/MobileMangers/service/meetingApply.do?reqCode=tkapplyMeeting</string>
    <string name="RequestHYSPinitViewtemp">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/meetingApply.do?reqCode=queryMeetingInitView</string>
    <string name="updateuserinfoRequest">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/validateUser.do?reqCode=updateUserDetailByUserId</string>
    <string name="rootRequest">http://223.71.215.73:8001/mobile/</string>
    <string name="xggrxx">GetActorService/SetActor</string>
    <string name="RequestHYSP_accept">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/meetingApply.do?reqCode=acceptMeeting</string>
    <string name="RequestHYSP_reject">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/meetingApply.do?reqCode=noAcceptMeeting</string>
    <string name="RequestHYSP_sppl">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=addCommentStamp</string>
    <string name="RequestHYSP_zjsp">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=changeActor</string>
    <string name="RequestHYSP_canclesp">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/meetingApply.do?reqCode=cancelMeeting</string>
    <string name="Request_getspr">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=getApprover</string>
    <string name="RequestCCSQ">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/tripApply.do?reqCode=startTripApply</string>
    <string name="RequestYYSP">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=getStampListBySwjgdm</string>
    <string name="RequestCommitYYSP">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=startStampApply</string>
    <string name="Request_add_spr">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=getApprover</string>
    <string name="RequestCommitSP">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=getApplyInfo</string>
    <string name="RequestSP_TY">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=acceptStamp</string>
    <string name="RequestSP_JJ">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=noAcceptStamp</string>
    <string name="RequestSP_ZJ">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=changeActor</string>
    <string name="RequestSP_PL">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=addCommentStamp</string>
    <string name="RequestSP_CX">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=cancelStamp</string>
    <string name="RequestSPR">http://223.71.215.73:8001/ydqz/mobileCtrl/callService.do?URL=/mobile/service/stampApply.do?reqCode=getApprover</string>
    <string name="stepone_inputnumber">1 输入手机号码</string>
    <string name="steptwo_inputcheckcode">2 输入验证码登录</string>
    <string name="stepone_arrright">></string>
    <string name="send_checkcode">发送验证码</string>
    <string name="input_username">请输入公文系统账户</string>
    <string name="input_checkcode">请在此输入您的验证码</string>
    <string name="login">登录</string>
    <string name="username">请输入公文系统账户</string>
    <string name="password">密码</string>
    <string name="main_login">登 录</string>
    <string name="activate_account">激活账户</string>
    <string name="cannotlogin">无法登录?</string>
    <string name="loginbycheckcode">使用验证码登录</string>
    <string name="msg_rc">日程消息</string>
    <string name="msg_sp">审批消息</string>
    <string name="msg_notify">通知消息</string>
    <string name="msg_default">默认</string>
</resources>